# kimspect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml  release.toml  renovate.json  rust-toolchain.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/actions/: build.yml  update-homebrew-formula.sh  update-homebrew.yml
.github/actions/build-cli/: action.yml
.github/actions/update-homebrew/: action.yml  kelper.rb.tpl  kimspect.rb.tpl  update-homebrew-formula.sh
.github/workflows/: main.yml  pr.yml  release-pr.yml  release.yml
.krew/: kelper.yml  kimspect.yml
.vhs/: demo-normal.tape  demo-wide.tape  demo.tape
scripts/: cargo_release.sh
src/: cli.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  formats.rs  mod.rs
src/k8s/: mod.rs
src/utils/: enums.rs  logging.rs  mod.rs
tests/: cli_tests.rs  integration_tests.rs  k8s_tests.rs
