[package]
name = "kimspect"
version = "0.0.32"
authors = ["Ali Abbas Jaffri <ali.abbasjaffri@live.com>"]
description = "The missing utility in kubectl to help you inspect container images on your pods and nodes."
keywords = ["k8s", "search", "pattern"]
repository = "https://github.com/koithos/kimspect"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
k8s-openapi = { version = "0.25", features = ["v1_31"] }
kube = { version = "1.1", features = ["runtime"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0"
colored = "3.0"
prettytable-rs = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
thiserror = "2.0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
